# ComfyUI-Azure-Blob-Storage

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: client_blob.py  logger.py  nodes_mappings.py
src/nodes/: download_file_blob.py  load_image_blob.py  save_image_blob.py  save_video_files_blob.py  upload_file_blob.py
